# hikup

./: .gitignore  CMakeLists.txt  README.md  build_server.sh  build_src.sh  docker-attach.sh  docker-compose.yaml  docker-update-start.sh
.github/workflows/: docker-image-edge.yml  docker-image-stable.yml
server/: ClientInfo.cpp  ClientInfo.h  ConnectionServer.cpp  ConnectionServer.h  ConnectionServer.hpp  Dockerfile  HTTPFileServer.cpp  HTTPFileServer.hpp  accepter.cpp  main.cpp  terminal.cpp  utilServer.cpp
server/includes/: mongoose.hpp
settings/: settings.toml
src/: Color.cpp  CommandType.cpp  Connection.cpp  Connection.h  Connection.hpp  main.cpp  util.cpp
src/client/: BatchHandlers.cpp  BatchHandlers.hpp  Color.cpp  Color.hpp  CommandHandlers.cpp  CommandHandlers.hpp  CommandType.cpp  CommandType.hpp  Connection.cpp  main.cpp  util.cpp
src/server/: ClientInfo.cpp  ClientInfo.hpp  ConnectionHandler.cpp  ConnectionHandler.hpp  ConnectionServer.cpp  ConnectionServer.hpp  Dockerfile  FileTracker.cpp  FileTracker.hpp  HTTPFileServer.cpp  HTTPFileServer.hpp  RemovalTracker.cpp  RemovalTracker.hpp  Settings.cpp  Settings.hpp  accepter.cpp  main.cpp  terminal.cpp  utilServer.cpp  utils.cpp  utils.hpp
src/server/includes/: mongoose.cpp
src/shared/: Connection.cpp  Connection.hpp  FileInfo.cpp  FileInfo.hpp  utils.cpp  utils.hpp
